# met-vocab-tools

./: .gitignore  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
.github/workflows/: pytest.yml  syntax.yml
metvocab/: __init__.py  cache.py  cfstd.py  config.py  lookup.py  mmdgroup.py  mmdvocab.py
metvocab/data/: README.md
tests/: conftest.py  test_cache.py  test_cfstd.py  test_config.py  test_init.py  test_lookup.py  test_mmdgroup.py  test_mmdvocab.py  tools.py
tests/files/: Access_Constraint.json  Instrument.json
tests/files/Instrument/: MODIS.json  OLCI.json
